# wykresy_temperaturowe

./: .gitignore  PythonApplication1.py  README.md  data_test.csv  pyproject.toml
scripts/: essemtec.py
src/essemtec/: __init__.py  __main__.py  app.py  cli.py  data_loader.py  models.py  thresholds.py
tests/: test_app_startup.py  test_data_loader.py  test_thresholds.py
