[tool.poetry]
name = "essemtec-temperature-plots"
version = "0.1.0"
description = "Interactive temperature profile viewer for UT325F CSV exports."
authors = ["Maintainers <maintainers@example.com>"]
readme = "README.md"
packages = [{ include = "essemtec", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
matplotlib = "^3.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[tool.poetry.scripts]
essemtec = "essemtec.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
